install/kubernetes/edgemicro-config-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${EDGEMICRO_NAMESPACE}
